--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+<color name="colorPrimary">#6200EE</color>
+<color name="colorPrimaryDark">#3700B3</color>
+<color name="colorAccent">#03DAC5</color>
+<color name="color_background1">#03A9F4</color>
+<color name="color_button1">#4CAF50</color>
+<color name="color_text1">#FF022724</color>
+<color name="color_data">#FFFF9800</color>
+<color name="colorW">#FFFFFF</color>
+
 </resources>
