--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,5 +6,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="CheckboxStyle" parent="AppTheme">
+        <item name="colorControlActivated">#FFC8EF6B</item>
+        <item name="colorControlNormal">#FF494944</item>
+    </style>
+
 
 </resources>
