--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/editTextDate"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="58dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:text="@string/data"
         android:textColor="@color/colorW"
-        android:textSize="28sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -29,10 +29,10 @@
 
     <TextView
         android:id="@+id/editTextTime"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="58dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:ems="10"
         android:gravity="center"
         android:text="@string/time"
@@ -52,8 +52,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginRight="200dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginRight="270dp"
         android:background="@color/colorGray"
         android:text="@string/wind"
         android:textColor="@color/colorW"
@@ -69,8 +69,8 @@
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginRight="200dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginRight="270dp"
         android:background="@color/colorGray"
         android:text="@string/humidity"
         android:textColor="@color/colorW"
@@ -85,8 +85,8 @@
         android:layout_height="28dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginRight="200dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginRight="270dp"
         android:background="@color/colorGray"
         android:text="@string/pressure"
         android:textColor="@color/colorW"
@@ -111,6 +111,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/colorGray"
+        android:text="@string/button_city"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="14sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/checkBox3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/checkBox3"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="0dp"
@@ -132,8 +151,8 @@
                 android:layout_marginBottom="1dp"
                 android:background="@color/colorW"
                 android:ems="10"
-                android:inputType="textPersonName"
                 android:hint="@string/c_t"
+                android:inputType="textPersonName"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@+id/textView3" />
 
