--- a/app/src/main/res/layout/activity_main_two.xml
+++ b/app/src/main/res/layout/activity_main_two.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_dent"
-    tools:context=".MainActivityTwo">
+    tools:context=".MainActivityTwo"
+    tools:visibility="visible">
 
 
     <TextView
@@ -15,11 +16,12 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="@string/humidityS"
+        android:text=""
         android:textColor="@color/dop"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19" />
+        app:layout_constraintTop_toBottomOf="@+id/textView19"
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView13"
@@ -27,10 +29,10 @@
         android:layout_height="127dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
-        android:text="@string/temp"
-        android:textSize="60sp"
-        android:textColor="@color/dop"
         android:gravity="center"
+        android:text="@string/temp"
+        android:textColor="@color/dop"
+        android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
@@ -38,14 +40,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="100dp"
         android:text="@string/city_name"
         android:textColor="@color/colorPrimary"
-        android:textSize="40sp"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,18 +64,15 @@
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:text="@string/data"
         android:textColor="@color/colorPrimary"
-        android:textSize="40sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView" />
 
     <TextView
@@ -98,6 +97,7 @@
         android:text="@string/wind"
         android:textColor="@color/dop"
         android:textSize="20sp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -112,7 +112,8 @@
         android:textColor="@color/dop"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView18"
@@ -125,7 +126,8 @@
         android:textColor="@color/dop"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView19"
@@ -133,11 +135,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="@string/windS"
+        android:text=""
         android:textColor="@color/dop"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView16" />
+        app:layout_constraintTop_toTopOf="@+id/textView16"
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView21"
@@ -146,12 +149,13 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="@string/pressureS"
+        android:text=""
         android:textColor="@color/dop"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView18"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+        app:layout_constraintTop_toBottomOf="@+id/textView20"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/button2"
@@ -160,10 +164,10 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
-        android:text="@string/back"
         android:background="@color/back"
-        android:textSize="15sp"
+        android:text="@string/back"
         android:textColor="@color/colorGray"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
